20100122 (T.S.)
 - configure/CONFIG: only include CONFIG_SITE if present.
20100122 (T.S.)
 - src/drvPadUdpComm.c: replaced strdup() by epicsStrDup().
20100122 (T.S.)
 - src/fidProcess.c: forgot to #define E_MOD1 and E_MOD5.
   Removed unused variable.
20100122 (T.S.)
 - src/padProto.h, src/padProto.c, src/drvPadUdpComm.c,
   src/padProtoHost.c, src/hostStream.c, src/padStream.c:

   **************************************************
   PROTOCOL VERSION CHANGE: PadReply layout modified:
   **************************************************
    - reduced size of 'status' to 8-bits
    - increased timestampHi -> 32-bits
20100122 (T.S.)
 - src/drvPadUdpComm.c:
   PADRPLY_STRM_NSAMPLES macro arg is now pointer to reply.
   (Support for 32-bit stream data.)
 - src/padProto.c: set cmdSize based on actual command (SIM's command
   struct is bigger than previously hardcoded 16 bytes).
 - src/padProto.h:
   PADRPLY_STRM_NSAMPLES macro arg is now pointer to reply.
   (Support for 32-bit stream data.)
 - src/padProtoHost.c:
    o New '-L' option to request 32-bit data streams.
    o Compute nsamples using PADRPLY_STRM_NSAMPLES macro.
    o Let SIM command send values 0xaaaa, 0xbbbb, 0xcccc, 0xdddd.
      (Should have another option to specivy values).
 - src/padStream.c: BUGFIX: must check for 32-bit data flag when
   copying data into lan9118's FIFO.
 - src/padUdpCommSupport.dbd: add driver and registrar for drvPadUdpComm.
20100118 (T.S.)
 - src/Makefile, src/devWfRawSig.c, src/drvPadUdpComm.c, src/drvPadUdpComm.h,
   src/drvPadUdpCommIO.h, src/fidProcess.c, src/fidProcess.h,
   src/padUdpCommSupport.dbd, src/wavBuf.c, src/wavBuf.h:
   unbundled drvPadUdpComm/wavBuf from Bpm IOC application and moved into
   udpComm EPICS module (tag udpComm_post_unbundle_drvPadUdpComm).
 20100118 (T.S.)
 - BUGFIX - src/udpCommBSD.c: make sure udpComm routines don't pass the return
   value of system calls (like 'connect') but the negative 'errno' value.
 20100118 (T.S.)